--- a/android/app/build.gradle
+++ b/android/app/build.gradle
@@ -1,5 +1,5 @@
 apply plugin: "com.android.application"
-
+apply plugin: 'com.google.gms.google-services'
 import com.android.build.OutputFile
 
 /**
@@ -103,6 +103,17 @@ android {
             abiFilters "armeabi-v7a", "x86"
         }
     }
+	 signingConfigs {
+	        release {
+	            if (project.hasProperty('MYAPP_RELEASE_STORE_FILE')) {
+	                storeFile file(MYAPP_RELEASE_STORE_FILE)
+	                storePassword MYAPP_RELEASE_STORE_PASSWORD
+	                keyAlias MYAPP_RELEASE_KEY_ALIAS
+	                keyPassword MYAPP_RELEASE_KEY_PASSWORD
+	            }
+	        }
+	    }
+
     splits {
         abi {
             reset()
@@ -115,6 +126,7 @@ android {
         release {
             minifyEnabled enableProguardInReleaseBuilds
             proguardFiles getDefaultProguardFile("proguard-android.txt"), "proguard-rules.pro"
+			 signingConfig signingConfigs.release
         }
     }
     // applicationVariants are e.g. debug, release
@@ -133,6 +145,10 @@ android {
 }
 
 dependencies {
+    compile project(':mobile-center-push')
+    compile project(':mobile-center-crashes')
+    compile project(':mobile-center-analytics')
+    compile project(':mobile-center')
     compile fileTree(dir: "libs", include: ["*.jar"])
     compile "com.android.support:appcompat-v7:23.0.1"
     compile "com.facebook.react:react-native:+"  // From node_modules
